# tuya-iotos-embeded-sdk-wifi-ble-bk7231t

./: .cmake-format.py  .gitignore  CMakeLists.txt  config.ps1
apps/: CMakeLists.txt
apps/my_blink_demo/src/: tuya_device.c
apps/my_http_server_demo/src/: tuya_device.c
apps/my_mqtt_demo/src/: tuya_device.c
apps/my_tcp_server_demo/src/: tuya_device.c
apps/my_udp_server_demo/src/: tuya_device.c
apps/template_demo/: CMakeLists.txt
sdk/: CMakeLists.txt
